--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
         <activity android:name=".LearningActivity" />
         <activity android:name=".TestActivity" />
+        <activity android:name=".InfoTestActivity" />
     </application>
 
 </manifest>
