практически финальный вариант

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
-        android:name=".App"
+        android:name=".pages.App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,7 +14,7 @@
         android:theme="@style/Theme._12"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".pages.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,9 +22,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LearningActivity" />
-        <activity android:name=".TestActivity" />
-        <activity android:name=".InfoTestActivity" />
-        <activity android:name=".CompleteActivity"/>
+        <activity android:name=".pages.LearningActivity" />
+        <activity android:name=".pages.TestActivity" />
+        <activity android:name=".pages.InfoTestActivity" />
+        <activity android:name=".pages.CompleteActivity"/>
     </application>
 </manifest>
